--- a/app/src/main/res/layout/items_fragment.xml
+++ b/app/src/main/res/layout/items_fragment.xml
@@ -100,7 +100,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/activity_margin"
             android:src="@drawable/ic_plus_vector"
-            app:shapeAppearanceOverlay="@style/fab_3_rounded" />
+            app:shapeAppearanceOverlay="@style/Fab3Rounded" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </com.simplemobiletools.filemanager.pro.fragments.ItemsFragment>
