Revert "存储页面样式优化"
This reverts commit bbf022bf7ae945031804e0f8ea5fdea37b9e884a.

--- a/app/src/main/res/layout/items_fragment.xml
+++ b/app/src/main/res/layout/items_fragment.xml
@@ -99,7 +99,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/activity_margin"
             android:src="@drawable/ic_plus_vector"
-            app:shapeAppearanceOverlay="@style/Fab3Rounded" />
+            app:shapeAppearanceOverlay="@style/fab_3_rounded" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </com.simplemobiletools.filemanager.pro.fragments.ItemsFragment>
