--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <style name="AppTheme" parent="AppTheme.Base" />
 
-    <style name="Fab3Rounded">
+    <style name="fab_3_rounded">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
         <item name="cornerSizeBottomRight">0dp</item>
