--- a/app/src/main/res/layout/storage_fragment.xml
+++ b/app/src/main/res/layout/storage_fragment.xml
@@ -11,16 +11,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/storage_holder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             tools:ignore="HardcodedText,RelativeOverlap">
 
             <RelativeLayout
                 android:id="@+id/free_space_holder"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackground"
                 android:paddingStart="@dimen/activity_margin"
@@ -32,9 +31,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="…"
-                    android:textSize="@dimen/extra_big_text_size"
-                    android:textStyle="bold"
-                    tools:text="32 GB" />
+                    android:textSize="@dimen/storage_free_space_text_size"
+                    tools:text="23 GB" />
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/free_space_label"
@@ -47,8 +45,7 @@
                     android:layout_toEndOf="@+id/free_space_value"
                     android:text="@string/storage_free"
                     android:textSize="@dimen/big_text_size"
-                    android:visibility="invisible"
-                    tools:visibility="visible" />
+                    android:visibility="invisible" />
 
                 <com.google.android.material.progressindicator.LinearProgressIndicator
                     android:id="@+id/main_storage_usage_progressbar"
@@ -58,8 +55,7 @@
                     android:layout_marginTop="@dimen/medium_margin"
                     android:layout_marginBottom="@dimen/medium_margin"
                     android:max="100"
-                    app:trackThickness="4dp"
-                    tools:progress="50" />
+                    app:trackThickness="4dp" />
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/total_space"
@@ -67,24 +63,27 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/main_storage_usage_progressbar"
                     android:layout_marginBottom="@dimen/big_margin"
-                    android:textSize="@dimen/normal_text_size"
+                    android:textSize="@dimen/big_text_size"
                     tools:text="Total storage: 64 GB" />
-
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/images_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/free_space_holder"
                 android:background="?attr/selectableItemBackground"
-                android:padding="@dimen/activity_margin">
+                android:paddingStart="@dimen/activity_margin"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="@dimen/activity_margin"
+                android:paddingBottom="@dimen/normal_margin">
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/images_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/images"
-                    android:textSize="@dimen/normal_text_size" />
+                    android:textSize="@dimen/bigger_text_size" />
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/images_size"
@@ -93,24 +92,37 @@
                     android:layout_alignParentEnd="true"
                     android:alpha="0.7"
                     android:text="…"
-                    android:textSize="@dimen/small_text_size"
+                    android:textSize="@dimen/normal_text_size"
                     tools:text="20 GB" />
 
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/images_progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/images_label"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:max="100"
+                    app:trackThickness="2dp" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/videos_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/images_holder"
                 android:background="?attr/selectableItemBackground"
-                android:padding="@dimen/activity_margin">
+                android:paddingStart="@dimen/activity_margin"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="@dimen/activity_margin"
+                android:paddingBottom="@dimen/normal_margin">
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/videos_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/videos"
-                    android:textSize="@dimen/normal_text_size" />
+                    android:textSize="@dimen/bigger_text_size" />
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/videos_size"
@@ -119,24 +131,37 @@
                     android:layout_alignParentEnd="true"
                     android:alpha="0.7"
                     android:text="…"
-                    android:textSize="@dimen/small_text_size"
+                    android:textSize="@dimen/normal_text_size"
                     tools:text="20 GB" />
 
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/videos_progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/videos_label"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:max="100"
+                    app:trackThickness="2dp" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/audio_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/videos_holder"
                 android:background="?attr/selectableItemBackground"
-                android:padding="@dimen/activity_margin">
+                android:paddingStart="@dimen/activity_margin"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="@dimen/activity_margin"
+                android:paddingBottom="@dimen/normal_margin">
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/audio_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/audio"
-                    android:textSize="@dimen/normal_text_size" />
+                    android:textSize="@dimen/bigger_text_size" />
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/audio_size"
@@ -145,24 +170,37 @@
                     android:layout_alignParentEnd="true"
                     android:alpha="0.7"
                     android:text="…"
-                    android:textSize="@dimen/small_text_size"
+                    android:textSize="@dimen/normal_text_size"
                     tools:text="20 GB" />
 
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/audio_progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/audio_label"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:max="100"
+                    app:trackThickness="2dp" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/documents_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/audio_holder"
                 android:background="?attr/selectableItemBackground"
-                android:padding="@dimen/activity_margin">
+                android:paddingStart="@dimen/activity_margin"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="@dimen/activity_margin"
+                android:paddingBottom="@dimen/normal_margin">
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/documents_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/documents"
-                    android:textSize="@dimen/normal_text_size" />
+                    android:textSize="@dimen/bigger_text_size" />
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/documents_size"
@@ -171,24 +209,37 @@
                     android:layout_alignParentEnd="true"
                     android:alpha="0.7"
                     android:text="…"
-                    android:textSize="@dimen/small_text_size"
+                    android:textSize="@dimen/normal_text_size"
                     tools:text="20 GB" />
 
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/documents_progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/documents_label"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:max="100"
+                    app:trackThickness="2dp" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/archives_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/documents_holder"
                 android:background="?attr/selectableItemBackground"
-                android:padding="@dimen/activity_margin">
+                android:paddingStart="@dimen/activity_margin"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="@dimen/activity_margin"
+                android:paddingBottom="@dimen/normal_margin">
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/archives_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/archives"
-                    android:textSize="@dimen/normal_text_size" />
+                    android:textSize="@dimen/bigger_text_size" />
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/archives_size"
@@ -197,24 +248,37 @@
                     android:layout_alignParentEnd="true"
                     android:alpha="0.7"
                     android:text="…"
-                    android:textSize="@dimen/small_text_size"
+                    android:textSize="@dimen/normal_text_size"
                     tools:text="20 GB" />
 
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/archives_progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/archives_label"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:max="100"
+                    app:trackThickness="2dp" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/others_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/archives_holder"
                 android:background="?attr/selectableItemBackground"
-                android:padding="@dimen/activity_margin">
+                android:paddingStart="@dimen/activity_margin"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="@dimen/activity_margin"
+                android:paddingBottom="@dimen/normal_margin">
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/others_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/others"
-                    android:textSize="@dimen/normal_text_size" />
+                    android:textSize="@dimen/bigger_text_size" />
 
                 <com.simplemobiletools.commons.views.MyTextView
                     android:id="@+id/others_size"
@@ -223,13 +287,19 @@
                     android:layout_alignParentEnd="true"
                     android:alpha="0.7"
                     android:text="…"
-                    android:textSize="@dimen/small_text_size"
+                    android:textSize="@dimen/normal_text_size"
                     tools:text="20 GB" />
 
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/others_progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/others_label"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:max="100"
+                    app:trackThickness="2dp" />
             </RelativeLayout>
-
-        </LinearLayout>
-
+        </RelativeLayout>
     </ScrollView>
-
 </com.simplemobiletools.filemanager.pro.fragments.StorageFragment>
