存储空间样式优化

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -176,7 +176,9 @@
                     style="@style/SettingsHolderTextViewStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ripple_background">
+                    android:background="@drawable/ripple_background"
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                     <com.simplemobiletools.commons.views.MyTextView
                         android:id="@+id/settings_font_size_label"
