--- a/app/src/main/res/layout/storage_fragment.xml
+++ b/app/src/main/res/layout/storage_fragment.xml
@@ -11,10 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/storage_holder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             tools:ignore="HardcodedText,RelativeOverlap">
 
             <RelativeLayout
@@ -65,130 +66,13 @@
                     android:layout_marginBottom="@dimen/big_margin"
                     android:textSize="@dimen/big_text_size"
                     tools:text="Total storage: 64 GB" />
-            </RelativeLayout>
 
-            <RelativeLayout
-                android:id="@+id/images_holder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/free_space_holder"
-                android:background="?attr/selectableItemBackground"
-                android:paddingStart="@dimen/activity_margin"
-                android:paddingTop="@dimen/normal_margin"
-                android:paddingEnd="@dimen/activity_margin"
-                android:paddingBottom="@dimen/normal_margin">
-
-                <com.simplemobiletools.commons.views.MyTextView
-                    android:id="@+id/images_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/images"
-                    android:textSize="@dimen/bigger_text_size" />
-
-                <com.simplemobiletools.commons.views.MyTextView
-                    android:id="@+id/images_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:alpha="0.7"
-                    android:text="…"
-                    android:textSize="@dimen/normal_text_size"
-                    tools:text="20 GB" />
-
-                <com.google.android.material.progressindicator.LinearProgressIndicator
-                    android:id="@+id/images_progressbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/images_label"
-                    android:layout_marginTop="@dimen/medium_margin"
-                    android:layout_marginBottom="@dimen/medium_margin"
-                    android:max="100"
-                    app:trackThickness="2dp" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/videos_holder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/images_holder"
-                android:background="?attr/selectableItemBackground"
-                android:paddingStart="@dimen/activity_margin"
-                android:paddingTop="@dimen/normal_margin"
-                android:paddingEnd="@dimen/activity_margin"
-                android:paddingBottom="@dimen/normal_margin">
-
-                <com.simplemobiletools.commons.views.MyTextView
-                    android:id="@+id/videos_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/videos"
-                    android:textSize="@dimen/bigger_text_size" />
-
-                <com.simplemobiletools.commons.views.MyTextView
-                    android:id="@+id/videos_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:alpha="0.7"
-                    android:text="…"
-                    android:textSize="@dimen/normal_text_size"
-                    tools:text="20 GB" />
-
-                <com.google.android.material.progressindicator.LinearProgressIndicator
-                    android:id="@+id/videos_progressbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/videos_label"
-                    android:layout_marginTop="@dimen/medium_margin"
-                    android:layout_marginBottom="@dimen/medium_margin"
-                    android:max="100"
-                    app:trackThickness="2dp" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/audio_holder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/videos_holder"
-                android:background="?attr/selectableItemBackground"
-                android:paddingStart="@dimen/activity_margin"
-                android:paddingTop="@dimen/normal_margin"
-                android:paddingEnd="@dimen/activity_margin"
-                android:paddingBottom="@dimen/normal_margin">
-
-                <com.simplemobiletools.commons.views.MyTextView
-                    android:id="@+id/audio_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/audio"
-                    android:textSize="@dimen/bigger_text_size" />
-
-                <com.simplemobiletools.commons.views.MyTextView
-                    android:id="@+id/audio_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:alpha="0.7"
-                    android:text="…"
-                    android:textSize="@dimen/normal_text_size"
-                    tools:text="20 GB" />
-
-                <com.google.android.material.progressindicator.LinearProgressIndicator
-                    android:id="@+id/audio_progressbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/audio_label"
-                    android:layout_marginTop="@dimen/medium_margin"
-                    android:layout_marginBottom="@dimen/medium_margin"
-                    android:max="100"
-                    app:trackThickness="2dp" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/documents_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/audio_holder"
                 android:background="?attr/selectableItemBackground"
                 android:paddingStart="@dimen/activity_margin"
                 android:paddingTop="@dimen/normal_margin"
@@ -221,13 +105,130 @@
                     android:layout_marginBottom="@dimen/medium_margin"
                     android:max="100"
                     app:trackThickness="2dp" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/images_holder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:paddingStart="@dimen/activity_margin"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="@dimen/activity_margin"
+                android:paddingBottom="@dimen/normal_margin">
+
+                <com.simplemobiletools.commons.views.MyTextView
+                    android:id="@+id/images_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/images"
+                    android:textSize="@dimen/bigger_text_size" />
+
+                <com.simplemobiletools.commons.views.MyTextView
+                    android:id="@+id/images_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:alpha="0.7"
+                    android:text="…"
+                    android:textSize="@dimen/normal_text_size"
+                    tools:text="20 GB" />
+
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/images_progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/images_label"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:max="100"
+                    app:trackThickness="2dp" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/videos_holder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:paddingStart="@dimen/activity_margin"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="@dimen/activity_margin"
+                android:paddingBottom="@dimen/normal_margin">
+
+                <com.simplemobiletools.commons.views.MyTextView
+                    android:id="@+id/videos_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/videos"
+                    android:textSize="@dimen/bigger_text_size" />
+
+                <com.simplemobiletools.commons.views.MyTextView
+                    android:id="@+id/videos_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:alpha="0.7"
+                    android:text="…"
+                    android:textSize="@dimen/normal_text_size"
+                    tools:text="20 GB" />
+
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/videos_progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/videos_label"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:max="100"
+                    app:trackThickness="2dp" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/audio_holder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:paddingStart="@dimen/activity_margin"
+                android:paddingTop="@dimen/normal_margin"
+                android:paddingEnd="@dimen/activity_margin"
+                android:paddingBottom="@dimen/normal_margin">
+
+                <com.simplemobiletools.commons.views.MyTextView
+                    android:id="@+id/audio_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/audio"
+                    android:textSize="@dimen/bigger_text_size" />
+
+                <com.simplemobiletools.commons.views.MyTextView
+                    android:id="@+id/audio_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:alpha="0.7"
+                    android:text="…"
+                    android:textSize="@dimen/normal_text_size"
+                    tools:text="20 GB" />
+
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/audio_progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/audio_label"
+                    android:layout_marginTop="@dimen/medium_margin"
+                    android:layout_marginBottom="@dimen/medium_margin"
+                    android:max="100"
+                    app:trackThickness="2dp" />
+
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/archives_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/documents_holder"
                 android:background="?attr/selectableItemBackground"
                 android:paddingStart="@dimen/activity_margin"
                 android:paddingTop="@dimen/normal_margin"
@@ -260,13 +261,13 @@
                     android:layout_marginBottom="@dimen/medium_margin"
                     android:max="100"
                     app:trackThickness="2dp" />
+
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/others_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/archives_holder"
                 android:background="?attr/selectableItemBackground"
                 android:paddingStart="@dimen/activity_margin"
                 android:paddingTop="@dimen/normal_margin"
@@ -299,7 +300,11 @@
                     android:layout_marginBottom="@dimen/medium_margin"
                     android:max="100"
                     app:trackThickness="2dp" />
+
             </RelativeLayout>
-        </RelativeLayout>
+
+        </LinearLayout>
+
     </ScrollView>
+
 </com.simplemobiletools.filemanager.pro.fragments.StorageFragment>
