--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -44,13 +44,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
-                android:text="@string/color_customization" />
+                android:text="@string/color_customization"
+                android:visibility="gone"
+                tools:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/settings_color_customization_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone"
+                tools:visibility="gone">
 
                 <RelativeLayout
                     android:id="@+id/settings_customize_colors_holder"
@@ -75,6 +79,7 @@
                 style="@style/SettingsSectionLabelStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
                 android:text="@string/general_settings" />
 
             <LinearLayout
@@ -88,7 +93,9 @@
                     style="@style/SettingsHolderCheckboxStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ripple_background">
+                    android:background="@drawable/ripple_background"
+                    android:visibility="gone"
+                    tools:visibility="gone">
 
                     <com.simplemobiletools.commons.views.MyAppCompatCheckbox
                         android:id="@+id/settings_use_english"
@@ -104,7 +111,9 @@
                     style="@style/SettingsHolderTextViewStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ripple_background">
+                    android:background="@drawable/ripple_background"
+                    android:visibility="gone"
+                    tools:visibility="gone">
 
                     <com.simplemobiletools.commons.views.MyTextView
                         android:id="@+id/settings_language_label"
@@ -178,7 +187,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/ripple_background"
                     android:visibility="gone"
-                    tools:visibility="visible">
+                    tools:visibility="gone">
 
                     <com.simplemobiletools.commons.views.MyTextView
                         android:id="@+id/settings_font_size_label"
@@ -202,7 +211,9 @@
                     style="@style/SettingsHolderCheckboxStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ripple_background">
+                    android:background="@drawable/ripple_background"
+                    android:visibility="gone"
+                    tools:visibility="gone">
 
                     <com.simplemobiletools.commons.views.MyAppCompatCheckbox
                         android:id="@+id/settings_press_back_twice"
@@ -251,13 +262,17 @@
                 style="@style/SettingsSectionLabelStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/scrolling" />
+                android:text="@string/scrolling"
+                android:visibility="gone"
+                tools:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/settings_scrolling_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone"
+                tools:visibility="gone">
 
                 <RelativeLayout
                     android:id="@+id/settings_enable_pull_to_refresh_holder"
@@ -295,7 +310,9 @@
                     style="@style/SettingsHolderCheckboxStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ripple_background">
+                    android:background="@drawable/ripple_background"
+                    android:visibility="gone"
+                    tools:visibility="gone">
 
                     <com.simplemobiletools.commons.views.MyAppCompatCheckbox
                         android:id="@+id/settings_keep_last_modified"
@@ -342,7 +359,9 @@
                     style="@style/SettingsHolderCheckboxStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ripple_background">
+                    android:background="@drawable/ripple_background"
+                    android:visibility="gone"
+                    tools:visibility="gone">
 
                     <com.simplemobiletools.commons.views.MyAppCompatCheckbox
                         android:id="@+id/settings_password_protection"
@@ -374,7 +393,9 @@
                     style="@style/SettingsHolderCheckboxStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/ripple_background">
+                    android:background="@drawable/ripple_background"
+                    android:visibility="gone"
+                    tools:visibility="gone">
 
                     <com.simplemobiletools.commons.views.MyAppCompatCheckbox
                         android:id="@+id/settings_file_deletion_password_protection"
